@@ -22,57 +22,57 @@
 /* cost ,flags, attack, defense, move, tech_req, vision, transport?, HP, FP, Obsolete, FUEL */
 
 struct unit_type unit_types[U_LAST]={
-  {"Settlers",  24, LAND_MOVING,  40,  F_SETTLERS | F_NONMIL,  0,  1,  1*3, A_NONE,        1,  0, 10, 1, U_ENGINEERS, 0},
-  {"Engineers", 42, LAND_MOVING,  40,  F_SETTLERS | F_NONMIL, 0, 2, 2*3, A_EXPLOSIVES, 1, 0, 20, 1, -1, 0},
-  {"Warriors",   18, LAND_MOVING,  10,  0,  1,  1,  1*3, A_NONE,        1,  0, 10, 1, U_PIKEMEN, 0},
-  {"Phalanx",   21, LAND_MOVING,  20,  0,  1,  2,  1*3, A_BRONZE,      1,  0, 10, 1, U_PIKEMEN, 0},
-  {"Archers",   28, LAND_MOVING,  30,  0,  3,  2,  1*3, A_WARRIORCODE, 1,  0, 10, 1, U_MUSKETEERS, 0},
-  {"Legion",    16, LAND_MOVING,  40,  0,  4,  2,  1*3, A_IRON,        1,  0, 10, 1, U_MUSKETEERS, 0},
-  {"Pikemen",   37, LAND_MOVING,  20,  F_PIKEMEN,  1,  2,  1*3, A_FEUDALISM,   1,  0, 10, 1, U_MUSKETEERS, 0},
-  {"Musketeers",19, LAND_MOVING,  30,  0,  3,  3,  1*3, A_GUNPOWDER,   1,  0, 20, 1, U_RIFLEMEN, 0},
-  {"Fanatics",  0,  LAND_MOVING,  20,  0,  4,  4,  1*3, A_LAST, 1,  0, 20, 1, -1, 0},
-  {"Partisan",  36, LAND_MOVING,  50,  F_IGZOC,  4,  4,  1*3, A_GUERILLA,    1,  0, 20, 1, -1, 0},
-  {"Alpine Troops", 45, LAND_MOVING, 50, F_IGTER, 5, 5, 1*3, A_TACTICS, 1, 0, 20, 1, -1, 0},  
-  {"Riflemen",  22, LAND_MOVING,  40,  0,  5,  4,  1*3, A_CONSCRIPTION,1,  0, 20, 1, -1, 0},
-  {"Marines",   40, LAND_MOVING,  60,  F_MARINES,  8,  5,  1*3, A_AMPHIBIOUS,  1,  0, 20, 1, -1, 0},
-  {"Paratroopers", 0, LAND_MOVING,  60,  0,  6,  4,  1*3, A_COMBINED,  1,  0, 20, 1, -1, 0},
-  {"Mech. Inf.",17, LAND_MOVING,  50,  0,  6,  6,  3*3, A_LABOR,       1,  0, 30, 1, -1, 0},
-  {"Horsemen",  8,  LAND_MOVING,  20,  F_HORSE,  2,  1,  2*3,  A_HORSEBACK,   1,  0, 10, 1, U_KNIGHTS, 0},
-  {"Chariot",   9,  LAND_MOVING,  30,  F_HORSE,  3,  1,  2*3, A_WHEEL, 1,  0, 10, 1, U_KNIGHTS, 0},
-  {"Elephants", 0,  LAND_MOVING,  40,  0, 4, 1, 2*3, A_POLYTHEISM, 1, 0, 10, 1, U_CRUSADERS, 0}, 
-  {"Crusaders",  0, LAND_MOVING, 40,  F_HORSE, 5, 1, 2*3, A_MONOTHEISM, 1, 0, 10, 1, U_DRAGOONS, 0},   
-  {"Knights",   15, LAND_MOVING,  40,  F_HORSE,  4,  2,  2*3, A_CHIVALRY,    1,  0, 20, 1, U_DRAGOONS, 0},
-  {"Dragoons",  32, LAND_MOVING,  50,  F_HORSE,  5,  2,  2*3, A_LEADERSHIP,  1,  0, 20, 1, U_CAVALRY, 0},
-  {"Cavalry",   29, LAND_MOVING,  60,  0,  8,  3,  2*3, A_TACTICS, 1,  0, 20, 1, U_ARMOR, 0},           /* IS NOT a normal horse attack */
-  {"Armor",     0,  LAND_MOVING,  80,  0, 10,  5,  3*3, A_MOBILE,      1,  0, 30, 1, -1, 0},
-  {"Catapult",  7,  LAND_MOVING,  40,  0,  6,  1,  1*3, A_MATHEMATICS, 1,  0, 10, 1, U_CANNON, 0},
-  {"Cannon",    4,  LAND_MOVING,  40,  0,  8,  1,  1*3, A_METALLURGY,  1,  0, 20, 1, U_ARTILLERY, 0},
-  {"Artillery", 43, LAND_MOVING,  50,  F_IGWALL, 10,  1,  2*3, A_MACHINE,    1,  0, 20, 2, U_HOWITZER, 0},
-  {"Howitzer", 1,  LAND_MOVING,  70,  F_IGWALL, 12,  2,  2*3, A_ROBOTICS,    1,  0, 30, 2, -1, 0},
-  {"Fighter",   12, AIR_MOVING,   60,  F_FIGHTER  | F_FIELDUNIT,  4,  3, 10*3, A_FLIGHT, 1,  0, 20, 2, U_SFIGHTER, 1},
-  {"Bomber",    3,  AIR_MOVING,  120,  F_FIELDUNIT|F_ONEATTACK, 12,  1,  8*3, A_ADVANCED,    2,  0, 20, 2, U_SBOMBER, 2},
-  {"Helicopter", 44, HELI_MOVING,  100,  F_ONEATTACK |F_FIELDUNIT,  10,  3, 6*3, A_COMBINED, 1, 0, 20, 2, -1, 0},
-  {"Stealth Fighter",47, AIR_MOVING,   80,  F_FIELDUNIT| F_FIGHTER,  8,  4, 14*3, A_STEALTH,1,  0, 20, 2, -1, 1},
-  {"Stealth Bomber", 46, AIR_MOVING,  160, F_FIELDUNIT|F_ONEATTACK, 14,  5,  8*3, A_STEALTH, 2,  0, 20, 2, -1, 2},
-  {"Trireme",   27, SEA_MOVING,   40,  F_FIELDUNIT,  1,  1,  3*3, A_MAPMAKING, 1,  2, 10, 1, U_CARAVEL, 0},
-  {"Caravel",   23, SEA_MOVING,   40,  0,  2,  1,  3*3, A_NAVIGATION,  1,  3, 10, 1, U_GALLEON, 0},
-  {"Galleon",   35, SEA_MOVING,   40,  0,  0,  2,  4*3, A_MAGNETISM,   1,  4, 20, 1, U_TRANSPORT, 0},
-  {"Frigate",   13, SEA_MOVING,   50,  F_FIELDUNIT,  4,  2,  4*3, A_MAGNETISM,   1,  2, 20, 1, U_IRONCLAD, 0},
-  {"Ironclad",  14, SEA_MOVING,   60,  F_FIELDUNIT,  4,  4,  4*3, A_STEAM,       1,  0, 30, 1, U_DESTROYER, 0},
-  {"Destroyer", 31, SEA_MOVING,   60,  F_FIELDUNIT,  4,  4,  6*3, A_ELECTRICITY, 1,  0, 30, 1, -1, 0},
-  {"Cruiser",   10, SEA_MOVING,   80,  F_FIELDUNIT,  6,  6,  5*3, A_STEEL,  2,  0, 30,2, U_AEGIS, 0},
-  {"AEGIS Cruiser", 48,SEA_MOVING,  100, F_AEGIS | F_FIELDUNIT,  8,  8,  5*3, A_ROCKETRY, 2, 0, 30, 2, -1, 0},
-  {"Battleship",2,  SEA_MOVING,  160,  F_FIELDUNIT, 12,  12,  4*3, A_AUTOMOBILE, 2,  0, 40, 2, -1, 0},
-  {"Submarine", 25, SEA_MOVING,   60,  F_FIELDUNIT|F_SUBMARINE, 10,  2,  3*3, A_COMBUSTION,  2,  8, 30, 1, -1, 0},
-  {"Carrier",   6,  SEA_MOVING,  160,  F_FIELDUNIT|F_CARRIER,  1, 9,  5*3, A_ADVANCED,    2,  8, 40, 2, -1, 0},
-  {"Transport", 26, SEA_MOVING,   50,  0,  0,  3,  5*3, A_INDUSTRIALIZATION,   2,  8, 30, 1, -1, 0},
-  {"Cruise Missile",30,AIR_MOVING,   60,  F_FIELDUNIT | F_MISSILE | F_ONEATTACK, 18,  0,  12*3, A_ROCKETRY,  1, 0, 10, 3, -1, 1},
-  {"Nuclear",   20, AIR_MOVING,  160,  F_FIELDUNIT | F_ONEATTACK | F_MISSILE, 99,  0, 16*3, A_ROCKETRY,     1,  0, 10, 1, -1, 1},
-  {"Diplomat",  11, LAND_MOVING,  30,  F_DIPLOMAT | F_IGZOC | F_NONMIL,  0,  0,  2*3, A_WRITING,  1,  0, 10, 1, U_SPY, 0},
-  {"Spy",       41, LAND_MOVING,  30,  F_DIPLOMAT | F_IGZOC | F_NONMIL,  0,  0,  3*3, A_ESPIONAGE,1,  0, 10, 1, -1, 0},
-  {"Caravan",   5,  LAND_MOVING,  50,  F_CARAVAN | F_IGZOC | F_NONMIL,  0,  1,  1*3, A_TRADE,       1,  0, 10, 1, U_FREIGHT, 0},
-  {"Freight",   34, LAND_MOVING,  50,  F_CARAVAN | F_IGZOC | F_NONMIL,  0,  1,  2*3, A_CORPORATION, 1,  0, 10, 1, -1, 0},
-  {"Explorer",  33, LAND_MOVING,  30,  F_NONMIL | F_IGTER,  0,  1,  1*3, A_SEAFARING,   1,  0, 10, 1, U_PARTISAN, 0}
+  {"Settlers",      24, LAND_MOVING, 40,   0,  1,  1*3, A_NONE,        1,  0, 20, 1, U_ENGINEERS, 0, F_SETTLERS | F_NONMIL },
+  {"Engineers",     42, LAND_MOVING, 40,   0,  2,  2*3, A_EXPLOSIVES,  1,  0, 20, 1, -1, 0, F_SETTLERS | F_NONMIL },
+  {"Warriors",      18, LAND_MOVING, 10,   1,  1,  1*3, A_NONE,        1,  0, 10, 1, U_PIKEMEN, 0, 0},
+  {"Phalanx",       21, LAND_MOVING, 20,   1,  2,  1*3, A_BRONZE,      1,  0, 10, 1, U_PIKEMEN, 0, 0},
+  {"Archers",       28, LAND_MOVING, 30,   3,  2,  1*3, A_WARRIORCODE, 1,  0, 10, 1, U_MUSKETEERS, 0, 0},
+  {"Legion",        16, LAND_MOVING, 40,   4,  2,  1*3, A_IRON,        1,  0, 10, 1, U_MUSKETEERS, 0, 0},
+  {"Pikemen",       37, LAND_MOVING, 20,   1,  2,  1*3, A_FEUDALISM,   1,  0, 10, 1, U_MUSKETEERS, 0, F_PIKEMEN},
+  {"Musketeers",    19, LAND_MOVING, 30,   3,  3,  1*3, A_GUNPOWDER,   1,  0, 20, 1, U_RIFLEMEN, 0,0 },
+  {"Fanatics",       0, LAND_MOVING, 20,   4,  4,  1*3, A_LAST,        1,  0, 20, 1, -1, 0,0},
+  {"Partisan",      36, LAND_MOVING, 50,   4,  4,  1*3, A_GUERILLA,    1,  0, 20, 1, -1, 0,F_IGZOC},
+  {"Alpine Troops", 45, LAND_MOVING, 50,   5,  5,  1*3, A_TACTICS,     1,  0, 20, 1, -1, 0,F_IGTER},  
+  {"Riflemen",      22, LAND_MOVING, 40,   5,  4,  1*3, A_CONSCRIPTION,1,  0, 20, 1, -1, 0,0},
+  {"Marines",       40, LAND_MOVING, 60,   8,  5,  1*3, A_AMPHIBIOUS,  1,  0, 20, 1, -1, 0,F_MARINES},
+  {"Paratroopers",   0, LAND_MOVING, 60,   6,  4,  1*3, A_COMBINED,    1,  0, 20, 1, -1, 0,0},
+  {"Mech. Inf.",    17, LAND_MOVING, 50,   6,  6,  3*3, A_LABOR,       1,  0, 30, 1, -1, 0,0},
+  {"Horsemen",       8, LAND_MOVING, 20,   2,  1,  2*3, A_HORSEBACK,   1,  0, 10, 1, U_KNIGHTS, 0,F_HORSE},
+  {"Chariot",        9, LAND_MOVING, 30,   3,  1,  2*3, A_WHEEL,       1,  0, 10, 1, U_KNIGHTS, 0,F_HORSE},
+  {"Elephants",      0, LAND_MOVING, 40,   4,  1,  2*3, A_POLYTHEISM,  1,  0, 10, 1, U_CRUSADERS, 0,0}, 
+  {"Crusaders",      0, LAND_MOVING, 40,   5,  1,  2*3, A_MONOTHEISM,  1,  0, 10, 1, U_DRAGOONS, 0,F_HORSE},   
+  {"Knights",       15, LAND_MOVING, 40,   4,  2,  2*3, A_CHIVALRY,    1,  0, 10, 1, U_DRAGOONS, 0,F_HORSE},
+  {"Dragoons",      32, LAND_MOVING, 50,   5,  2,  2*3, A_LEADERSHIP,  1,  0, 20, 1, U_CAVALRY, 0,F_HORSE},
+  {"Cavalry",       29, LAND_MOVING, 60,   8,  3,  2*3, A_TACTICS,     1,  0, 20, 1, U_ARMOR, 0,0},           /* IS NOT a normal horse attack */
+  {"Armor",          0, LAND_MOVING, 80,  10,  5,  3*3, A_MOBILE,      1,  0, 30, 1, -1, 0,0},
+  {"Catapult",       7, LAND_MOVING, 40,   6,  1,  1*3, A_MATHEMATICS, 1,  0, 10, 1, U_CANNON, 0,0},
+  {"Cannon",         4, LAND_MOVING, 40,   8,  1,  1*3, A_METALLURGY,  1,  0, 20, 1, U_ARTILLERY, 0,0},
+  {"Artillery",     43, LAND_MOVING, 50,  10,  1,  1*3, A_MACHINE,     1,  0, 20, 2, U_HOWITZER, 0,0},
+  {"Howitzer",       1, LAND_MOVING, 70,  12,  2,  2*3, A_ROBOTICS,    1,  0, 30, 2, -1, 0,F_IGWALL},
+  {"Fighter",       12, AIR_MOVING,  60,   4,  3, 10*3, A_FLIGHT,      2,  0, 20, 2, U_SFIGHTER, 1,F_FIGHTER  | F_FIELDUNIT},
+  {"Bomber",         3, AIR_MOVING, 120,  12,  1,  8*3, A_ADVANCED,    2,  0, 20, 2, U_SBOMBER, 2,F_FIELDUNIT|F_ONEATTACK},
+  {"Helicopter",    44, HELI_MOVING,100,  10,  3,  6*3, A_COMBINED,    2,  0, 20, 2, -1, 0,F_ONEATTACK |F_FIELDUNIT},
+  {"Stealth Fighter",47,AIR_MOVING,  80,   8,  4, 14*3, A_STEALTH,     2,  0, 20, 2, -1, 1,F_FIELDUNIT| F_FIGHTER},
+  {"Stealth Bomber",46, AIR_MOVING, 160,  14,  5, 12*3, A_STEALTH,     2,  0, 20, 2, -1, 2,F_FIELDUNIT|F_ONEATTACK},
+  {"Trireme",       27, SEA_MOVING,  40,   1,  1,  3*3, A_MAPMAKING,   1,  2, 10, 1, U_CARAVEL, 0,F_FIELDUNIT},
+  {"Caravel",       23, SEA_MOVING,  40,   2,  1,  3*3, A_NAVIGATION,  1,  3, 10, 1, U_GALLEON, 0,0},
+  {"Galleon",       35, SEA_MOVING,  40,   0,  2,  4*3, A_MAGNETISM,   1,  4, 20, 1, U_TRANSPORT, 0,0},
+  {"Frigate",       13, SEA_MOVING,  50,   4,  2,  4*3, A_MAGNETISM,   1,  2, 20, 1, U_IRONCLAD, 0,F_FIELDUNIT},
+  {"Ironclad",      14, SEA_MOVING,  60,   4,  4,  4*3, A_STEAM,       1,  0, 30, 1, U_DESTROYER, 0,F_FIELDUNIT},
+  {"Destroyer",     31, SEA_MOVING,  60,   4,  4,  6*3, A_ELECTRICITY, 2,  0, 30, 1, -1, 0,F_FIELDUNIT},
+  {"Cruiser",       10, SEA_MOVING,  80,   6,  6,  5*3, A_STEEL,       2,  0, 30, 2, U_AEGIS, 0,F_FIELDUNIT},
+  {"AEGIS Cruiser", 48, SEA_MOVING, 100,   8,  8,  5*3, A_ROCKETRY,    2,  0, 30, 2, -1, 0,F_AEGIS | F_FIELDUNIT},
+  {"Battleship",     2, SEA_MOVING, 160,  12, 12,  4*3, A_AUTOMOBILE,  2,  0, 40, 2, -1, 0,F_FIELDUNIT},
+  {"Submarine",     25, SEA_MOVING,  60,  10,  2,  3*3, A_COMBUSTION,  2,  8, 30, 2, -1, 0,F_FIELDUNIT|F_SUBMARINE},
+  {"Carrier",        6, SEA_MOVING, 160,   1,  9,  5*3, A_ADVANCED,    2,  8, 40, 2, -1, 0,F_FIELDUNIT|F_CARRIER},
+  {"Transport",     26, SEA_MOVING,  50,   0,  3,  5*3, A_INDUSTRIALIZATION,2, 8, 30, 1, -1, 0,0},
+  {"Cruise Missile",30, AIR_MOVING,  60,  18,  0, 12*3, A_ROCKETRY,    1,  0, 10, 3, -1, 1,F_FIELDUNIT | F_MISSILE | F_ONEATTACK},
+  {"Nuclear",       20, AIR_MOVING, 160,  99,  0, 16*3, A_ROCKETRY,    1,  0, 10, 1, -1, 1,F_FIELDUNIT | F_ONEATTACK | F_MISSILE},
+  {"Diplomat",      11, LAND_MOVING, 30,   0,  0,  2*3, A_WRITING,     1,  0, 10, 1, U_SPY, 0,F_DIPLOMAT | F_IGZOC | F_NONMIL},
+  {"Spy",           41, LAND_MOVING, 30,   0,  0,  3*3, A_ESPIONAGE,   2,  0, 10, 1, -1, 0,F_DIPLOMAT | F_IGZOC | F_NONMIL},
+  {"Caravan",        5, LAND_MOVING, 50,   0,  1,  1*3, A_TRADE,       1,  0, 10, 1, U_FREIGHT, 0,F_CARAVAN | F_IGZOC | F_NONMIL},
+  {"Freight",       34, LAND_MOVING, 50,   0,  1,  2*3, A_CORPORATION, 1,  0, 10, 1, -1, 0,F_CARAVAN | F_IGZOC | F_NONMIL},
+  {"Explorer",      33, LAND_MOVING, 30,   0,  1,  1*3, A_SEAFARING,   1,  0, 10, 1, U_PARTISAN, 0,F_NONMIL | F_IGTER | F_IGZOC}
 
 };
 
